--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -16,6 +16,9 @@ body {
   font-family: 'Cherry Swash', sans-serif;
 }
 
+.font-rubik {
+  font-family: 'Rubik', sans-serif;
+} 
 .font-sub-title {
   font-weight: 200;
   font-family: 'Cherry Swash', sans-serif;
